examples/negative/43_fluo_transient_no_compliance.fluo
# BREAKS: an edge named in a volume-budget/transient claim with neither
#   a compliance record nor an extractable wall (fluorite/03 sec. 1: "an
#   edge with NEITHER a record nor an extractable wall, named in a
#   transient or volume-budget claim, is a compile diagnostic").
# EXPECT-TODO: WO-32
# Self-calibration (WO-31 D3): NOT front-end decidable. "Neither a
# compliance record nor an extractable wall" (fluorite/03 sec. 1) needs
# the implementing part's realized wall record -- geometry extraction
# that happens in lowering (WO-32), not at the front end. The front end
# cannot prove the absence of an extractable wall from a `from=` ref it
# does not resolve. Candidate finding: this transient/volume-budget
# compliance check belongs to WO-32 (fluorite lowering), not WO-31.
import std.fluorite (Pipe)

medium HydOil: liquid
    props: registry(iso_vg32_hydraulic)

flownet Rigid(medium=HydOil):
    reference: ambient(101kPa, 293K)
    nodes: a, b
    edges:
        pipe: Pipe(from=nowhere.run) (a -> b)

require Budget:
    bad: fluids.volume_consumed([pipe], at=10MPa) < 1L
